--- a/app/src/main/res/layout/fragment_music_toplist_item.xml
+++ b/app/src/main/res/layout/fragment_music_toplist_item.xml
@@ -3,7 +3,8 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:padding="5dp">
+              android:padding="5dp"
+    android:id="@+id/ll_toplist">
 
     <RelativeLayout
         android:layout_width="100dp"
