list中的数据能获取到了，主界面的popupwindow做了，还是有很多问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,21 +64,21 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/iv_main_twins"
+            android:id="@+id/ib_main_twins"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@mipmap/bt_minibar_play_normal"
             android:background="@null"/>
         <ImageButton
-            android:id="@+id/iv_main_next"
+            android:id="@+id/ib_main_next"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@mipmap/bt_minibar_next_normal"
             android:background="@null"/>
         <ImageButton
-            android:id="@+id/iv_main_list"
+            android:id="@+id/ib_main_list"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
