--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
             android:layout_weight="4"
             android:clickable="true">
             <ImageView
+                android:id="@+id/iv_main_play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -47,6 +48,7 @@
                 android:layout_weight="3"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/tv_main_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -55,6 +57,7 @@
                     android:textSize="13sp"
                     android:textColor="#000000"/>
                 <TextView
+                    android:id="@+id/tv_main_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
