--- a/app/src/main/res/layout/fragment_music_playlist_item_playlist_item.xml
+++ b/app/src/main/res/layout/fragment_music_playlist_item_playlist_item.xml
@@ -5,8 +5,7 @@
               android:layout_height="wrap_content"
     android:padding="5dp"
     android:id="@+id/ll_playlist_list"
-    android:clickable="true"
-    android:descendantFocusability="blocksDescendants">
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="260dp"
