--- a/app/src/main/res/layout/fragment_play_main.xml
+++ b/app/src/main/res/layout/fragment_play_main.xml
@@ -5,16 +5,20 @@
               android:layout_height="match_parent"
     android:gravity="center">
     <ImageButton
+        android:id="@+id/ib_playpage_big"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        />
+        android:scaleType="fitXY"
+        android:background="@null"/>
     <TextView
+        android:id="@+id/tv_playpage_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="A Little Braver"
         android:textSize="20sp"/>
     <TextView
+        android:id="@+id/tv_playpage_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
