--- a/app/src/main/res/layout/fragment_music_playlist_item_playlist.xml
+++ b/app/src/main/res/layout/fragment_music_playlist_item_playlist.xml
@@ -4,85 +4,174 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="#ffffff">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:background="#f2827a"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="#30469b"
-            app:expandedTitleMarginStart="48dp"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/iv_playlist_list_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:background="#f2827a"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
-
-                <ImageView
-                    android:src="@mipmap/ic_launcher"
-                    android:id="@+id/ivImage"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:scaleType="fitXY"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center">
-                    <TextView
-                        android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:src="@mipmap/ic_launcher"
+                        android:id="@+id/iv_playlist_list_big"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_marginTop="50dp"
+                        android:layout_gravity="center"
+                        android:scaleType="fitXY"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="标签:"/>
-                    <TextView
-                        android:layout_width="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="标签: "/>
+                        <TextView
+                            android:id="@+id/tv_playlist_list_tag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="华语 流行 伤感"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="华语 流行 伤感"/>
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:scaleType="fitXY"
+                            android:src="@mipmap/ic_launcher"/>
+                        <TextView
+                            android:id="@+id/tv_playlist_list_username"
+                            android:layout_width="270dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="当我想你的那一秒"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:src="@mipmap/ic_songlist_listen"/>
+                        <TextView
+                            android:id="@+id/tv_playlist_list_listennum"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginLeft="5dp"
+                            android:text="607"/>
+                    </LinearLayout>
                 </LinearLayout>
+
+            </LinearLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                android:layout_gravity="top"
+                android:paddingTop="10dp"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:scaleType="fitXY"
-                        android:src="@mipmap/ic_launcher"/>
-                    <TextView
-                        android:layout_width="280dp"
-                        android:layout_height="wrap_content"
-                        android:text="当我想你的那一秒"/>
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/ib_playlist_return"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_songlist_listen"/>
+                        android:src="@mipmap/ic_title_return"
+                        android:background="@null"/>
                     <TextView
+                        android:id="@+id/tv_playlist_list_title"
+                        android:layout_width="270dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="good  ddd dfgdga ds"
+                        android:textSize="20sp"/>
+                    <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="607"/>
+                        android:layout_marginBottom="15dp"
+                        android:src="@mipmap/bt_playpage_moreactions_normal_new"
+                        android:background="@null"/>
                 </LinearLayout>
-
-            </LinearLayout>
-
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#d29c69">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/bt_artist_item_play_nor"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="播放全部"
+                android:textSize="12sp"/>
+            <TextView
+                android:id="@+id/tv_playlist_list_songnum"
+                android:layout_width="225dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="/19首歌"
+                android:textSize="10sp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:src="@mipmap/bt_mv_pull_down_normal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="下载"
+                android:textSize="10sp"/>
+        </LinearLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_music_playlist_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </android.support.v4.widget.NestedScrollView>
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
