--- a/app/src/main/res/layout/fragment_play_info.xml
+++ b/app/src/main/res/layout/fragment_play_info.xml
@@ -11,6 +11,7 @@
             android:id="@+id/ib_playpage_small"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:scaleType="fitXY"
             android:background="@null"/>
         <LinearLayout
             android:layout_width="wrap_content"
