--- a/app/src/main/res/layout/fragment_play_lyrics.xml
+++ b/app/src/main/res/layout/fragment_play_lyrics.xml
@@ -15,4 +15,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="查找词图"/>
+
+    <!--<TextView-->
+        <!--android:id="@+id/tv_playpage_lyric"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"/>-->
 </LinearLayout>
