写了数据库的插入、查询、删除，popup页的列表写好了，但是还不能实现自动播放下一首

--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
     android:padding="5dp">
     <LinearLayout
-        android:layout_width="280dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/tv_main_list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="title"/>
+            android:text="title"
+            android:textSize="12sp"
+            android:textColor="#000000"/>
         <TextView
             android:id="@+id/tv_main_list_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="author"/>
+            android:text="author"
+            android:textSize="10sp"/>
     </LinearLayout>
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/ib_main_popup_delete"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginTop="12dp"
+        android:src="@mipmap/icon_popup_close"
         android:background="@null"/>
 </LinearLayout>
