--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -3,7 +3,8 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-    android:padding="5dp">
+              android:padding="5dp"
+              android:descendantFocusability="blocksDescendants">
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
