--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -59,11 +59,28 @@
                 android:background="@null"/>
         </LinearLayout>
 
-        <SeekBar
-            android:id="@+id/seekBar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="12dp"
-            android:thumb="@mipmap/bt_playpage_button_progress_normal"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/time_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"/>
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="250dp"
+                android:layout_height="12dp"
+                android:thumb="@mipmap/bt_playpage_button_progress_normal"/>
+            <TextView
+                android:id="@+id/time_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"/>
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -87,7 +104,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:src="@mipmap/bt_playpage_button_play_normal_new"
+                android:src="@mipmap/bt_playpage_button_pause_normal_new"
                 android:background="@null"/>
             <ImageButton
                 android:id="@+id/ib_playpage_next"
